<resources>
    <string name="app_name">Readers Hub</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="my_books">Books</string>
    <string name="exchange">Exchange</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="select_language">Select language</string>
    <string name="english">English</string>
    <string name="amharic">አማርኛ</string>
    <string name="oromifa">Oromifa</string>
    <string name="tigrigna">ትግሪኛ</string>
    <string name="next">Next</string>
    <string name="a_promised_land_synopsis">

A riveting, deeply personal account of history in the making, from the president who inspired us to believe in the power of democracy.\n\n

In the stirring, highly anticipated first volume of his presidential memoirs, Barack Obama tells the story of his improbable odyssey from young man searching for his identity to leader of the free world, describing in strikingly personal detail both his political education and the landmark moments of the first term of his historic presidency—a time of dramatic transformation and turmoil. \n\n

Obama takes readers on a compelling journey from his earliest political aspirations to the pivotal Iowa caucus victory that demonstrated the power of grassroots activism to the watershed night of November 4, 2008, when he was elected 44th president of the United States, becoming the first African American to hold the nation’s highest office. \n\n

Reflecting on the presidency, he offers a unique and thoughtful exploration of both the awesome reach and the limits of presidential power, as well as singular insights into the dynamics of U.S. partisan politics and international diplomacy. Obama brings readers inside the Oval Office and the White House Situation Room, and to Moscow, Cairo, Beijing, and points beyond. We are privy to his thoughts as he assembles his cabinet, wrestles with a global financial crisis, takes the measure of Vladimir Putin, overcomes seemingly insurmountable odds to secure passage of the Affordable Care Act, clashes with generals about U.S. strategy in Afghanistan, tackles Wall Street reform, responds to the devastating Deepwater Horizon blowout, and authorizes Operation Neptune’s Spear, which leads to the death of Osama bin Laden.\n\n

A Promised Land is extraordinarily intimate and introspective—the story of one man’s bet with history, the faith of a community organizer tested on the world stage. Obama is candid about the balancing act of running for office as a Black American, bearing the expectations of a generation buoyed by messages of “hope and change,” and meeting the moral challenges of high-stakes decision-making. He is frank about the forces that opposed him at home and abroad, open about how living in the White House affected his wife and daughters, and unafraid to reveal self-doubt and disappointment. Yet he never wavers from his belief that inside the great, ongoing American experiment, progress is always possible.\n\n

This beautifully written and powerful book captures Barack Obama’s conviction that democracy is not a gift from on high but something founded on empathy and common understanding and built together, day by day. \n\n
    </string>


    <string-array name="cities">
        <item>All</item>
        <item>Adama</item>
        <item>Addis Ababa</item>
        <item>Adigrat</item>
        <item>Aksum</item>
        <item>Ambo</item>
        <item>Arba Minch</item>
        <item>Asela</item>
        <item>Asosa</item>
        <item>Bahir Dar</item>
    </string-array>


    <string-array name="sub_cities">
        <item>All</item>
        <item>Addis Ketema</item>
        <item>Akaki Kality</item>
        <item>Arada</item>
        <item>Bole</item>
        <item>Gulele</item>
        <item>Kirkos</item>
        <item>Kolfe Keranio</item>
        <item>Lideta</item>
        <item>Nifas Silk</item>

    </string-array>


    <string-array name="genre">
        <item>All</item>
        <item>Biography</item>
        <item>Fiction</item>
        <item>Novel</item>
        <item>History</item>
        <item>Mythology</item>
        <item>Satire</item>
        <item>Self help</item>
        <item>Classic</item>
        <item>Mystery</item>

    </string-array>

    <string-array name="add_genre">
        <item>Biography</item>
        <item>Fiction</item>
        <item>Novel</item>
        <item>History</item>
        <item>Mythology</item>
        <item>Satire</item>
        <item>Self help</item>
        <item>Classic</item>
        <item>Mystery</item>

    </string-array>
</resources>