<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_mybook"
        android:icon="@drawable/ic_baseline_library_books_24"
        android:title="@string/my_books" />

    <item
        android:id="@+id/navigation_exchange"
        android:icon="@drawable/ic_round_compare_arrows_24"
        android:title="@string/exchange" />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_round_message_24"
        android:title="@string/messages" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_outline_account_circle_24"
        android:title="@string/profile" />

</menu>